<resources>
    <string name="app_name">PDI</string>
    <string name="hola_mundo">Hola mundo</string>
    <string name="mi_jardin">Mi jardin</string>
    <string name="plantas">Plantas</string>
    <string name="foto_del_manzano">Foto del manzano</string>
    <string name="manzano">Manzano</string>
    <string name="peral">Peral</string>
    <string name="todo">TODO</string>
    <string name="naranjo">Naranjo</string>
    <string name="limonero">Limonero</string>
    <string name="aloe_vera">Aloe Vera</string>
    <string name="lavanda">Lavanda</string>
    <string name="mygardeen">MyGardeen</string>
    <string name="contrase_a">Contraseña</string>
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="rosa">Rosa</string>
    <string name="tulipan">Tulipan</string>
    <string name="nombre_cientifico">Nombre Cientifico</string>
    <string name="descripcion">Descripcion</string>
</resources>